--- a/src/settings.html
+++ b/src/settings.html
@@ -6,7 +6,7 @@
   <title>Image Folder Settings</title>
 
   <!-- build:css css/settings.min.css -->
-  <link rel="stylesheet" href="components/common-style/dist/css/rise.min.css">
+  <link rel="stylesheet" href="components/rv-common-style/dist/css/rise.min.css">
   <!-- endbuild -->
 
   <style type="text/css">
@@ -42,7 +42,7 @@
           </div>
           <form role="form" name="settingsForm">
             <url-field name="urlField" url="settings.additionalParams.url" company-id="{{settings.params.companyId}}"
-              ng-model="urlField" valid></url-field>
+              storage-type="single-folder" ng-model="urlField" valid></url-field>
             <p id="folder-error" class="text-danger text-validation" ng-show="!isFolder">
               {{"image-folder.storage-error" | translate}}
             </p>
