Adding support for displaying messages regarding rise-storage events
- Displaying a message when `rise-storage` is fetching folder files
- Displaying a message when a selected storage folder has no images
- Displaying a message when a selected storage folder doesn't exist
- Applicable test coverage
- Fixed failing tests in `widget-folder-image-slider.html`. Due to changes in web component tester, the spy in "initialize" test needed to be set earlier

--- a/test/index.html
+++ b/test/index.html
@@ -13,6 +13,7 @@
       WCT.loadSuites([
         "integration/widget-image-folder-slider.html",
         "integration/widget-image-folder-storage.html",
+        "integration/widget-image-folder-message.html"
       ]);
     </script>
   </body>
