--- a/test/integration/widget-image-folder-storage.html
+++ b/test/integration/widget-image-folder-storage.html
@@ -21,6 +21,8 @@
     </div>
   </div>
 
+  <div id="messageContainer"></div>
+
   <script src="//rvashow2.appspot.com/gadgets/gadgets.min.js"></script>
 
   <script src="../data/storage.js"></script>
@@ -32,6 +34,7 @@
   <script src="../../src/config/config.js"></script>
   <script src="../../src/widget/image-folder.js"></script>
   <script src="../../src/widget/storage.js"></script>
+  <script src="../../src/widget/message.js"></script>
   <script src="../../src/widget/main.js"></script>
   <script src="../../src/widget/slider.js"></script>
 
